--- a/xl/index.html
+++ b/xl/index.html
@@ -27,6 +27,7 @@
     padding: 2px 2px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    Z-INDEX: 300;
   }
 </style>
 
@@ -3461,7 +3462,8 @@ console.log("finished init");
 <script>
   const messages = [
     "We still do not know how",
-    "No Pringles were smashed in the making of this site."
+    "No Pringles were smashed in the making of this site.",
+    "Snooping as usual i see"
   ];
 
   const data = {
