--- a/xl/index.html
+++ b/xl/index.html
@@ -3467,7 +3467,7 @@ console.log("finished init");
   ];
 
   const data = {
-    copyright: `(C) Pingas Co. 2007-present, $${messages[Math.floor(Math.random() * messages.length)]}`
+    copyright: `(C) Pingas Co. 2007-present, ${messages[Math.floor(Math.random() * messages.length)]}`
   };
 
   const div = document.createElement("div");
