--- a/xl/index.html
+++ b/xl/index.html
@@ -3503,29 +3503,19 @@ document.addEventListener("keydown", async function(e) {
         let published = now.toLocaleString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
 
         let newItem = {
-            "dislikes": 0,
-            "time_created": 1,
-            "likes": 0,
-            "duration": "0:01",
-            "displayable_view_count": "1",
-            "category": collab,
-            "view_count": 1,
-            "user_id": 1,
+            "video_id": "neck",
+            "displayable_view_count": "2",
+            "view_count": "2",
             "author": author,
+            "duration": "00:05",
+            "length_seconds": 5,
             "restricted": 0,
-            "hide_view_count": false,
-            "length_seconds": null,
-            "published_localized": null,
-            "updated": null,
-            "description": description,
-            "format": null,
-            "price": null,
-            "expires": null,
-            "video_id": "new",
-            "racy": false,
-            "image_url": image_url,
-            "published": published,
-            "title": title
+            "image_url": "/uploads/thumbnails/nLAh6t4CgRa_thumb.jpg",
+            "user_id": "/",
+            "description": "67",
+            "title": title,
+            "rating": 0,
+            "author_url": author
         };
 
         try {
