--- a/xl/index.html
+++ b/xl/index.html
@@ -3510,9 +3510,9 @@ document.addEventListener("keydown", async function(e) {
             "duration": "00:05",
             "length_seconds": 5,
             "restricted": 0,
-            "image_url": "/uploads/thumbnails/nLAh6t4CgRa_thumb.jpg",
+            "image_url": image_url,
             "user_id": "/",
-            "description": "67",
+            "description": description,
             "title": title,
             "rating": 0,
             "author_url": author
