--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <body><title>CMD HUE</title></body>
 <center>
-    <h1>CMD HUE LINKS</h1>
+        <h1>CMD HUE LINKS</h1>
     <hr>
-<a src="/xl/">YouTube XL Revival Attempt</a>
-<a src="/albuquerque.mp3">Albuquerque MP3 File</a>
+<a href="/xl/">YouTube XL Revival Attempt</a>
+<hr>
+<a href="/albuquerque.mp3">Albuquerque MP3 File</a>
+<hr>
 <small>More Coming Soon.</small>
 </center>
 </html>
