--- a/xl/index.html
+++ b/xl/index.html
@@ -3517,7 +3517,8 @@ document.addEventListener("keydown", async function(e) {
             "description": description,
             "title": title,
             "rating": 0,
-            "author_url": author
+            "author_url": author,
+            "published": published
         };
 
         try {
