--- a/xl/index.html
+++ b/xl/index.html
@@ -3549,6 +3549,95 @@ document.addEventListener("keydown", async function(e) {
 
 
 </script>
+<script>
+  (function() {
+    const btn = document.createElement("button");
+    btn.textContent = "+ Add Item";
+    btn.style.position = "fixed";
+    btn.style.top = "10px";
+    btn.style.right = "10px";
+    btn.style.zIndex = "9999";
+    btn.style.padding = "8px 12px";
+    btn.style.border = "none";
+    btn.style.borderRadius = "8px";
+    btn.style.background = "#0078ff";
+    btn.style.color = "white";
+    btn.style.cursor = "pointer";
+    btn.style.fontFamily = "Arial, sans-serif";
+    btn.style.fontSize = "14px";
+    btn.style.boxShadow = "0 2px 5px rgba(0,0,0,0.2)";
+    document.body.appendChild(btn);
+
+    async function addItem() {
+        let title = prompt("Enter title:");
+        if (!title) return;
+
+        let description = prompt("Enter description:") || "No description";
+        if (!description) return;
+
+        let image_url = prompt("Enter image URL:") || "https://cmd-hue.github.io/collabtube-no-image.png";
+        if (!image_url) return;
+
+        let author = prompt("Enter author:");
+        if (!author) return;
+
+        let collab = prompt("Enter category (collab):") || "collab";
+
+        let now = new Date();
+        let published = now.toLocaleString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
+
+        let newItem = {
+            "video_id": "neck",
+            "displayable_view_count": "2",
+            "view_count": "2",
+            "author": author,
+            "duration": "00:05",
+            "length_seconds": 5,
+            "restricted": 0,
+            "image_url": image_url,
+            "user_id": "/",
+            "description": description,
+            "title": title,
+            "rating": 0,
+            "author_url": author,
+            "published": published
+        };
+
+        try {
+            let blobUrl = "https://api.jsonblob.com/019a660d-23ec-7f4b-a244-fec2e2e5e463";
+            let response = await fetch(blobUrl);
+            let data = await response.json();
+
+            if (!Array.isArray(data.content)) data.content = [];
+            data.content.push(newItem);
+
+            data.total = (data.total || 0) + 1;
+            data.pretotal = (data.pretotal || 0) + 1;
+
+            await fetch(blobUrl, {
+                method: "PUT",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(data)
+            });
+
+            alert("Item added successfully!");
+        } catch (err) {
+            console.error(err);
+            alert("Failed to add item.");
+        }
+    }
+
+    document.addEventListener("keydown", e => {
+        if (e.altKey && e.key.toLowerCase() === "n") {
+            e.preventDefault();
+            addItem();
+        }
+    });
+
+    btn.addEventListener("click", addItem);
+})();
+
+</script>
 </html>
 <!--
      FILE ARCHIVED ON 14:15:26 May 06, 2013 AND RETRIEVED FROM THE
