--- a/xl/console_profile.html
+++ b/xl/console_profile.html
@@ -1,5 +1,5 @@
 {
-  "photo": "/default.gif",
+  "profile": "/default.gif",
   "last_log_in": "August 12, 2012",
   "view_count": null,
   "signup_date": "June 1, 2006",
