--- a/xl/console_profile.html
+++ b/xl/console_profile.html
@@ -1,7 +1,8 @@
 {
-  "profile": "/default.gif",
+  "photo": "/cyclone.png",
   "last_log_in": "August 12, 2012",
-  "view_count": null,
+  "view_count": 7,
   "signup_date": "June 1, 2006",
   "description": "This is an user that is basically just unexpected"
+  "total_subscribers": 67,
 }
