--- a/xl/console_profile.html
+++ b/xl/console_profile.html
@@ -1,8 +1,11 @@
 {
+{
   "photo": "/cyclone.png",
   "last_log_in": "August 12, 2012",
   "view_count": 7,
   "signup_date": "June 1, 2006",
   "description": "This is an user that is basically just unexpected"
   "total_subscribers": 67,
+}
+"user":""
 }
