--- a/xl/index.html
+++ b/xl/index.html
@@ -3217,7 +3217,7 @@ fetch(vidtapebrowse)
           serviceBrowseUserVideos(cacheUploads, 'https://corsproxy.io/?https://inv.nadeko.net/api/v1/popular', "No Videos Uploaded"),
           serviceBrowseUserVideos(cacheFavorites, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?start-index=1&max-results=40&feed=mpt_top_music_today&racy=include&app=desktop', "No Videos Favorited")
         ],
-        service_browse_search: serviceBrowseSearch(cacheSearch, 'https://cmd-hue.github.io/console_results', github),
+        service_browse_search: serviceBrowseSearch(cacheSearch, 'https://cmd-hue.github.io/console_results.html', github),
         service_related: [
           serviceRelated(cacheRelated1, ''),
           serviceRelated(cacheRelated2, 'texas.json')
