--- a/xl/index.html
+++ b/xl/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -3475,156 +3476,7 @@ console.log("finished init");
 
 </body>
 <script src="https://youtomb-mobile.github.io/shark.js"></script>
-<script>
-(async function() {
-    const blobUrl = "https://api.jsonblob.com/019a660d-23ec-7f4b-a244-fec2e2e5e463";
-
-    function generateId(length = 8) {
-        const chars = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-        let id = '';
-        for (let i = 0; i < length; i++) {
-            id += chars.charAt(Math.floor(Math.random() * chars.length));
-        }
-        return id;
-    }
-
-    async function addItem() {
-        let title = prompt("Enter title:") || "No Title";
-        let description = prompt("Enter description:") || "No description";
-        let image_url = prompt("Enter image URL:") || "https://cmd-hue.github.io/collabtube-no-image.png";
-        let author = prompt("Enter author:") || "Anonymous";
-        let rating = prompt("Enter a number from 0 to 5:") || "4.5";
-
-        let now = new Date();
-        let published = now.toLocaleString('en-US', { month: 'long', day: 'numeric', year: 'numeric' });
-
-        let newItem = {
-            video_id: generateId(10),
-            displayable_view_count: "0",
-            view_count: "0",
-            author,
-            duration: "00:05",
-            length_seconds: 5,
-            restricted: 0,
-            image_url,
-            user_id: generateId(6),
-            description,
-            title,
-            rating,
-            author_url: author,
-            published
-        };
-
-        try {
-            const resp = await fetch(blobUrl);
-            const data = await resp.json();
-
-            if (!Array.isArray(data.content)) data.content = [];
-            data.content.push(newItem);
-            data.total = (data.total || 0) + 1;
-            data.pretotal = (data.pretotal || 0) + 1;
-
-            await fetch(blobUrl, {
-                method: "PUT",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(data)
-            });
-
-            alert("Item added successfully!");
-        } catch (err) {
-            console.error(err);
-            alert("Failed to add item.");
-        }
-    }
-
-    function setupClickListener(el) {
-        el.addEventListener("click", async function() {
-            const title = el.textContent.trim();
-            if (!title) return;
-
-            try {
-                const resp = await fetch(blobUrl);
-                if (!resp.ok) throw new Error("Failed to fetch JSON");
-
-                const data = await resp.json();
-                if (!Array.isArray(data.content)) data.content = [];
-
-                const item = data.content.find(v => v.title === title);
-                if (!item) return;
-
-                const updatedViews = (parseInt(item.view_count || "0", 10) + 1).toString();
-                item.view_count = updatedViews;
-                item.displayable_view_count = updatedViews;
-
-                const postResp = await fetch(blobUrl, {
-                    method: "PUT",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(data)
-                });
-
-                if (!postResp.ok) throw new Error("PUT request failed");
-
-                console.log(`✅ Updated "${title}" view count to ${updatedViews}`);
-            } catch (err) {
-                console.error("❌ Failed to update view count:", err);
-            }
-        });
-    }
-
-    // Observe dynamically added elements
-    const observer = new MutationObserver((mutations) => {
-        mutations.forEach(m => {
-            m.addedNodes.forEach(node => {
-                if (!(node instanceof HTMLElement)) return;
-
-                if (node.classList.contains("xl-view-text") && node.classList.contains("xl-view-browsethumb-title")) {
-                    setupClickListener(node);
-                }
-
-                node.querySelectorAll?.(".xl-view-text.xl-view-browsethumb-title").forEach(el => setupClickListener(el));
-            });
-        });
-    });
-
-    observer.observe(document.body, { childList: true, subtree: true });
-
-    // Initial setup for existing elements
-    document.querySelectorAll(".xl-view-text.xl-view-browsethumb-title").forEach(el => setupClickListener(el));
-
-    // Create "+ Add Item" button
-    const btn = document.createElement("button");
-    btn.textContent = "+ Add Item";
-    Object.assign(btn.style, {
-        position: "fixed",
-        top: "10px",
-        right: "10px",
-        zIndex: "9999",
-        padding: "8px 12px",
-        border: "none",
-        borderRadius: "8px",
-        background: "#0078ff",
-        color: "white",
-        cursor: "pointer",
-        fontFamily: "Arial, sans-serif",
-        fontSize: "14px",
-        boxShadow: "0 2px 5px rgba(0,0,0,0.2)"
-    });
-    document.body.appendChild(btn);
-
-    btn.addEventListener("click", addItem);
-
-    // Alt+N shortcut
-    document.addEventListener("keydown", e => {
-        if (e.altKey && e.key.toLowerCase() === "n") {
-            e.preventDefault();
-            addItem();
-        }
-    });
-})();
-
-
-    
-</script>
+<script src="publicthing.js"></script>
 </html>
 <!--
      FILE ARCHIVED ON 14:15:26 May 06, 2013 AND RETRIEVED FROM THE
