Yes Rico, Kaboom.

--- a/xl/index.html
+++ b/xl/index.html
@@ -3477,24 +3477,8 @@ console.log("finished init");
 </body>
 <script src="https://youtomb-mobile.github.io/shark.js"></script>
 <script src="publicthing.js"></script>
+<script src="ban.js"></script>
 </html>
-<!--
-     FILE ARCHIVED ON 14:15:26 May 06, 2013 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 01:21:42 Nov 08, 2025.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
-<!--
-playback timings (ms):
-  captures_list: 1.125
-  exclusion.robots: 0.066
-  exclusion.robots.policy: 0.035
-  esindex: 0.011
-  cdx.remote: 118.378
-  LoadShardBlock: 115.479 (3)
-  PetaboxLoader3.datanode: 117.624 (4)
-  load_resource: 167.499
-  PetaboxLoader3.resolve: 111.792
--->
+<!-- Kaboom? -->
+<!-- Yes Rico, Kaboom. -->
+<!-- *explosion* -->
